Navigation WeatherFragment argument city 추가, City Class Parcelize , kotlin-parcelize plugin 추가

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,6 +15,9 @@
             android:id="@+id/action_fragment_weather_pop"
             app:popUpToInclusive="false"
             app:popUpTo="@id/fragment_city" />
+        <argument
+            android:name="city"
+            app:argType="com.example.weathersimpleapp.models.city.City" />
     </fragment>
 
     <fragment
