--- a/app/src/main/res/layout/fragment_city.xml
+++ b/app/src/main/res/layout/fragment_city.xml
@@ -12,13 +12,33 @@
     android:layout_height="match_parent"
     tools:context=".ui.city.CityFragment">
 
+    <EditText
+        android:id="@+id/search_et"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@={viewModel.searchText}"
+        android:textSize="20sp"
+        android:inputType="text"
+        android:singleLine="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:textColor="@color/black"
+        android:hint="@string/input_search_data"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/city_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"
-        android:visibility="@{viewModel.cityList.size() > 0 ? View.VISIBLE : View.GONE}"/>
+        android:visibility="@{viewModel.cityList.size() > 0 ? View.VISIBLE : View.GONE}"
+        app:layout_constraintTop_toBottomOf="@id/search_et"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
