DTO 분리 및 WeatherFragment layout 작업 완료

--- a/app/src/main/res/layout/item_city.xml
+++ b/app/src/main/res/layout/item_city.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="city"
-            type="com.example.weathersimpleapp.models.city.City" />
+            type="com.example.weathersimpleapp.models.dto.city.City" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
