--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -2,7 +2,9 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="android.view.View"/>
+
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.example.weathersimpleapp.ui.weather.WeatherViewModel" />
@@ -11,89 +13,184 @@
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/swipe_refresh_layout"
+        setIsRefreshing="@{viewModel.isRefreshing}"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        setIsRefreshing="@{viewModel.isRefreshing}"
         tools:context=".ui.weather.WeatherFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#82000000"
-            android:padding="20dp">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/city_tv"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:text="@{viewModel.city.name}"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@id/country_tv"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/country_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{viewModel.city.country}"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@id/city_tv"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/city_tv"
-                app:layout_constraintTop_toTopOf="@id/city_tv" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#82000000"
+                    android:paddingTop="30dp"
+                    android:paddingEnd="20dp"
+                    android:paddingStart="20dp"
+                    android:paddingBottom="30dp">
 
-            <ImageView
-                android:id="@+id/weather_image"
-                setImage='@{viewModel.weather.weatherIconUrl ?? ""}'
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toStartOf="@id/temp_tv"
-                app:layout_constraintHorizontal_chainStyle="spread"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/city_tv" />
+                    <TextView
+                        android:id="@+id/city_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:text="@{viewModel.city.name}"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toStartOf="@id/country_tv"
+                        app:layout_constraintHorizontal_chainStyle="packed"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/weather_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{viewModel.weather.weather.param}"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="@id/weather_image"
-                app:layout_constraintStart_toStartOf="@id/weather_image"
-                app:layout_constraintTop_toBottomOf="@id/weather_image" />
+                    <TextView
+                        android:id="@+id/country_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewModel.city.country}"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="@id/city_tv"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/city_tv"
+                        app:layout_constraintTop_toTopOf="@id/city_tv" />
 
-            <TextView
-                android:id="@+id/temp_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{viewModel.weather.temperatureText}"
-                android:textColor="@color/white"
-                android:textSize="50sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@id/weather_tv"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/weather_image"
-                app:layout_constraintTop_toTopOf="@id/weather_image" />
+                    <ImageView
+                        android:id="@+id/weather_image"
+                        setImage='@{viewModel.weather.weatherIconUrl ?? ""}'
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_marginTop="20dp"
+                        app:layout_constraintEnd_toStartOf="@id/temp_tv"
+                        app:layout_constraintHorizontal_chainStyle="spread"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/city_tv" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text='@{viewModel.weather.maxTemperatureText + "/" + viewModel.weather.minTemperatureText}'
-                android:textColor="@color/white"
-                android:textSize="30sp"
-                app:layout_constraintEnd_toEndOf="@id/temp_tv"
-                app:layout_constraintStart_toStartOf="@id/temp_tv"
-                app:layout_constraintTop_toBottomOf="@id/temp_tv" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:id="@+id/weather_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewModel.weather.weather}"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        app:layout_constraintEnd_toEndOf="@id/weather_image"
+                        app:layout_constraintStart_toStartOf="@id/weather_image"
+                        app:layout_constraintTop_toBottomOf="@id/weather_image" />
+
+                    <TextView
+                        android:id="@+id/temp_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewModel.weather.temperatureText}"
+                        android:textColor="@color/white"
+                        android:textSize="50sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="@id/weather_tv"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/weather_image"
+                        app:layout_constraintTop_toTopOf="@id/weather_image" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text='@{viewModel.weather.maxTemperatureText + "/" + viewModel.weather.minTemperatureText}'
+                        android:textColor="@color/white"
+                        android:textSize="30sp"
+                        app:layout_constraintEnd_toEndOf="@id/temp_tv"
+                        app:layout_constraintStart_toStartOf="@id/temp_tv"
+                        app:layout_constraintTop_toBottomOf="@id/temp_tv" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp">
+
+                    <TextView
+                        android:id="@+id/humidity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:textSize="20sp"
+                        android:text="@string/humidity"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:id="@+id/humidity_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/humidity"
+                        android:layout_marginStart="20dp"
+                        android:textSize="20sp"
+                        android:text="@{viewModel.weather.humidityText}"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:id="@+id/wind_speed"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        app:layout_constraintTop_toBottomOf="@id/humidity"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:textSize="20sp"
+                        android:text="@string/wind_speed"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:id="@+id/wind_speed_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="@id/wind_speed"
+                        app:layout_constraintBottom_toBottomOf="@id/wind_speed"
+                        app:layout_constraintStart_toEndOf="@id/wind_speed"
+                        android:layout_marginStart="20dp"
+                        android:textSize="20sp"
+                        android:text="@{viewModel.weather.windSpeedText}"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:id="@+id/wind_gust"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        app:layout_constraintTop_toBottomOf="@id/wind_speed"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:textSize="20sp"
+                        android:text="@string/wind_gust"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:id="@+id/wind_gust_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="@id/wind_gust"
+                        app:layout_constraintBottom_toBottomOf="@id/wind_gust"
+                        app:layout_constraintStart_toEndOf="@id/wind_gust"
+                        android:layout_marginStart="20dp"
+                        android:textSize="20sp"
+                        android:text="@{viewModel.weather.windGustText}"
+                        android:textColor="@color/black"/>
+
+
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </LinearLayout>
+
+
+        </ScrollView>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
